cmake_minimum_required(VERSION 3.29)
project(untitled C)

set(CMAKE_C_STANDARD 11)


add_executable(Printf Day_one/Printf.c)
add_executable(DataType Day_one/DataType.c)
add_executable(DataBase Day_one/DataBase.c)
add_executable(Scanf Day_one/Scanf.c)
add_executable(Operators_one Day_two/Operators_one.c)
add_executable(Conversion Day_one/Conversion.c)
add_executable(Operators_two Day_two/Operators_two.c)
add_executable(Operator_three Day_two/Operator_three.c)
add_executable(controller_one Day_three/controller_one.c)
add_executable(controller_two Day_three/controller_two.c)
add_executable(controller_three Day_three/controller_three.c)
add_executable(controller_four Day_three/controller_four.c)