cmake_minimum_required(VERSION 3.29)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(Hello_world Day_one/Hello_world.cpp)
add_executable(constant Day_one/constant.cpp)
add_executable(data_model Day_two/data_model.cpp)
add_executable(cin Day_two/cin.cpp)
add_executable(operator Day_two/operator.cpp)
add_executable(controller_one Day_three/controller_one.cpp)
add_executable(controller_two Day_three/controller_two.cpp)
add_executable(controller_three Day_three/controller_three.cpp)
add_executable(controller_four Day_three/controller_four.cpp)
add_executable(controller_five Day_three/controller_five.cpp)
add_executable(array_one Day_four/array_one.cpp)
add_executable(array_two Day_four/array_two.cpp)
add_executable(pointer_one Day_five/pointer_one.cpp)
add_executable(pointer_two Day_five/pointer_two.cpp)
add_executable(pointer_three Day_five/pointer_three.cpp)
add_executable(pointer_four Day_five/pointer_four.cpp)
add_executable(pointer_five Day_five/pointer_five.cpp)
add_executable(pointer_array Day_five/pointer_array.cpp)
add_executable(struct_one Day_six/struct_one.cpp)
add_executable(struct_two Day_six/struct_two.cpp)
add_executable(struct_three Day_six/struct_three.cpp)
add_executable(func_one Day_seven/func_one.cpp)
add_executable(func_two Day_seven/func_two.cpp)
add_executable(class_one Day_eight/class_one.cpp)