cmake_minimum_required(VERSION 3.29)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(Hello_world Day_one/Hello_world.cpp)
add_executable(constant Day_one/constant.cpp)
add_executable(data_model Day_two/data_model.cpp)
add_executable(cin Day_two/cin.cpp)
add_executable(operator Day_two/operator.cpp)
add_executable(controller_one Day_three/controller_one.cpp)
add_executable(controller_two Day_three/controller_two.cpp)
add_executable(controller_three Day_three/controller_three.cpp)