# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

lite_component("faultloggerd") {
  features = [
    "interfaces/innerkits/signal_handler:dfx_signalhandler",
    "interfaces/innerkits/dump_catcher:lib_dfx_dump_catcher",
    "interfaces/innerkits/faultloggerd_client:libfaultloggerd",
    "services:faultloggerd",
    "tools/process_dump:processdump",
    "tools/crasher_c:crasher_c",
    "tools/crasher_cpp:crasher_cpp",
    ":faultloggerd_test",
  ]
}

lite_component("faultloggerd_test") {
  if (ohos_kernel_type == "liteos_m") {
    features = []
  } else {
    features = []
    if (ohos_build_type == "debug") {
      features += [
        "services/test/unittest:test_service",
        "test/moduletest:FaultloggerdModuleTest",
        "test/systemtest:test_faultloggerd",
        "tools/process_dump/test/unittest:test_processdump",
      ]
    }
  }
}
