# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

if (defined(ohos_lite)) {
  executable("dumpcatcherdemo") {
    sources = [ "dump_catcher_demo.cpp" ]

    visibility = [ "*:*" ]

    include_dirs = [
      ".",
      "//utils/native/base/include",
      "$faultloggerd_path/interfaces/innerkits/dump_catcher/include/",
      "$faultloggerd_path/common",
      "$faultloggerd_path/tools/process_dump",
      "$hilog_lite_include_path",
    ]

    deps = [
      "$faultloggerd_path/interfaces/innerkits/dump_catcher:lib_dfx_dump_catcher",
      "$hilog_lite_deps_path",
    ]
  }
} else {
  config("dumpcatcherdemo_config") {
    visibility = [ ":*" ]

    include_dirs = [
      ".",
      "//utils/native/base/include",
      "$faultloggerd_path/interfaces/innerkits/dump_catcher/include/",
    ]
  }

  ohos_executable("dumpcatcherdemo") {
    sources = [ "dump_catcher_demo.cpp" ]

    configs = [ ":dumpcatcherdemo_config" ]

    deps = [
      "$faultloggerd_path/interfaces/innerkits/dump_catcher:lib_dfx_dump_catcher",
      "//utils/native/base:utils",
    ]

    external_deps = [ "hilog_native:libhilog" ]

    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
