# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")
if (defined(ohos_lite)) {
  import("//build/lite/config/test.gni")
} else {
  import("//build/test.gni")
}
group("faultloggerd_moduletest") {
  testonly = true
  deps = [ "moduletest:moduletest" ]
}

group("faultloggerd_systemtest") {
  testonly = true
  deps = [ "systemtest:systemtest" ]
}

group("faultloggerd_performancetest") {
  testonly = true
  deps = []

  deps += [ "performancetest:performance" ]
}

group("faultloggerd_fuzzertest") {
  testonly = true
  deps = []

  deps += [ "fuzztest/faultloggerd_fuzzer:fuzztest" ]
}
