# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_source_set("libhitrace_source") {
  include_dirs = [
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include",
    "//base/hiviewdfx/hilog/frameworks/native/include",
    "//utils/native/base/include",
  ]

  sources = [
    "hitrace.cpp",
    "hitracec.c",
    "hitraceid.cpp",
  ]

  external_deps = [ "hilog_native:libhilog" ]

  deps = [ "//utils/native/base:utils" ]
}
