# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

if (defined(ohos_lite)) {
  shared_library("libfaultloggerd") {
    visibility = [ "*:*" ]

    include_dirs = [
      ".",
      "./include",
      "//utils/native/base/include",
      "$faultloggerd_path/tools/process_dump/",
      "$faultloggerd_path/common",
      "$hilog_lite_include_path",
    ]

    sources = [
      "//base/hiviewdfx/faultloggerd/tools/process_dump/dfx_log.cpp",
      "faultloggerd_client.cpp",
    ]

    deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared" ]
  }
} else {
  config("faultloggerd_client_config") {
    visibility = [ "*:*" ]

    include_dirs = [
      "include",
      "//utils/native/base/include",
      "$faultloggerd_path/common",
      "$faultloggerd_path/tools/process_dump/",
    ]
  }

  ohos_shared_library("libfaultloggerd") {
    public_configs = [ ":faultloggerd_client_config" ]

    sources = [
      "//base/hiviewdfx/faultloggerd/tools/process_dump/dfx_log.cpp",
      "faultloggerd_client.cpp",
    ]

    external_deps = [
      "hilog_native:libhilog",
      "utils_base:utils",
    ]
    install_images = [
      "system",
      "updater",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
